kubernetes/security/network-policy.yaml
# kubernetes/security/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: loyalty-batch-engine-network-policy
  namespace: loyalty-system
spec:
  podSelector:
    matchLabels:
      app: loyalty-batch-engine
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
    - ports:
        - port: 9874
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
    - ports:
        - port: 5432
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
        - podSelector:
            matchLabels:
              k8s-app: kube-dns
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
